# AutoML-eval

./: .gitignore  README.md  demo_episode.py  requirements.txt  run_server.py
agentenv_automl/: __init__.py  env_wrapper.py  environment.py  launch.py  model.py  pyproject.toml  server.py
agentgym_integration/: automl_client.py  ds_star_eval.py  eval_titanic.json  setup_agentgym.sh  setup_ds_star.sh
automl_eval/: __init__.py  action_parser.py  data_insights.py  environment.py  metrics.py  reward.py  sandbox.py  server.py  session.py  task.py  task_registry.py
automl_eval/tasks/: generate_titanic.py  titanic.csv  titanic_binary.json
automl_eval/validators/: __init__.py  backtracking.py  base.py  baseline_comparison.py  composite.py  correctness.py  correlation.py  distribution.py  duplicate.py  efficiency.py  execution.py  feature_importance.py  feature_pipeline.py  hyperparam.py  intactness.py  iterative_cycle.py  leakage.py  missing_values.py  model_choice.py  model_eval.py  namespace_check.py  plan_coverage.py  reproducibility.py  split_quality.py  target_leakage_model.py
tests/: TESTING.md  test_agentgym_chain.py  test_client.py  test_cycle_validators.py  test_data_quality_validators.py  test_ds_star_integration.py  test_integration.py  test_model_validators.py  test_new_validators.py  test_pipeline_validators.py  test_step_ordering.py
